[package]
name = "db-keystore"
version = "0.4.1"
edition = "2024"
authors = ["Steve Schoettler <stevelr-git@pm.me>"]
description = "SQLite-backed credential store for the `keyring-core` API"
repository = "https://github.com/stevelr/db-keystore"
homepage = "https://github.com/stevelr/db-keystore"
license = "MIT or Apache-2.0"
keywords = ["keyring", "credential", "sqlite", "turso", "secrets-manager"]
categories = ["database", "api-bindings"]
readme = "README.md"
rust-version = "1.88"

[lib]

[[bin]]
name = "db-keystore"
path = "bin/db-keystore.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
keyring-core = "0.7.2"
log = "0.4.29"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
turso = "0.5.0-pre.13"
uuid = { version = "1.21.0", features = ["v7"] }
zeroize = "1.8.2"

[dev-dependencies]
tempfile = "3.26.0"
