[package]
name = "db-keystore"
version = "0.5.0-pre.1"
authors = ["Steve Schoettler <stevelr-git@pm.me>"]
categories = ["database", "api-bindings"]
edition = "2024"
homepage = "https://github.com/stevelr/db-keystore"
keywords = ["keyring", "credential", "sqlite", "turso", "secrets-manager"]
license = "MIT or Apache-2.0"
readme = "README.md"
repository = "https://github.com/stevelr/db-keystore"
rust-version = "1.88"
description = "Encrypted SQLite credential store for the `keyring-core` API, backed by turso"

[lib]

[[bin]]
name = "db-keystore"
path = "bin/db-keystore.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
keyring-core = "1.0.0"
log = "0.4.29"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
turso = { version = "0.7.0", default-features = false, features = ["mimalloc"] }
uuid = { version = "1.22.0", features = ["v7"] }
zeroize = "1.8.2"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["fs"] }

[dev-dependencies]
tempfile = "3.27.0"
