[package]
name = "db-keystore"
version = "0.5.0-pre.2"
authors = ["Steve Schoettler <stevelr-git@pm.me>"]
categories = ["database", "api-bindings"]
edition = "2024"
homepage = "https://github.com/stevelr/db-keystore"
keywords = ["keyring", "credential", "sqlite", "turso", "secrets-manager"]
license = "MIT or Apache-2.0"
readme = "README.md"
repository = "https://github.com/stevelr/db-keystore"
rust-version = "1.88"
description = "Encrypted SQLite credential store for the `keyring-core` API, backed by turso"

[lib]

[[bin]]
name = "db-keystore"
path = "bin/db-keystore.rs"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.3", features = ["derive"] }
futures = "0.3.33"
keyring-core = "1.0.0"
log = "0.4.33"
regex = "1.13.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
turso = { version = "0.7.0", default-features = false, features = ["mimalloc"] }
uuid = { version = "1.24.0", features = ["v7"] }
zeroize = "1.9.0"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["fs"] }

[dev-dependencies]
tempfile = "3.27.0"
